# signlang-eyes

./: CMakeLists.txt  README.md  conanfile.txt
conf/: conf.toml
handpose_det/: CMakeLists.txt  handpose_transport.hpp  main.cpp
speech_asr/: CMakeLists.txt  iceoryx_gateway.cpp  iceoryx_gateway.hpp  program_options.cpp  program_options.hpp  speech_asr_result.hpp
src/ai_chat/: CMakeLists.txt  ai_chat_client.cpp  ai_chat_client.hpp  ai_chat_result.hpp  httplib.h  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp
src/audio_frontend/: CMakeLists.txt  README.md  audio_record_test.cpp  main.cpp
src/env_sound_det/: CMakeLists.txt  README.md
src/gps_mqtt/: CMakeLists.txt  emergency_listener.cpp  emergency_listener.hpp  gps_data.hpp  json_utils.cpp  json_utils.hpp  main.cpp  mqtt_client.cpp  mqtt_client.hpp  nmea_parser.cpp  nmea_parser.hpp  program_options.cpp  program_options.hpp  serial_reader.cpp  serial_reader.hpp
src/handpose_det/: CMakeLists.txt  README.md  program_options.hpp
src/launcher/: README.md  main.cpp
src/peripheral_service/: iceoryx_gateway.cpp  main.cpp  program_options.cpp
src/signlang_det/: CMakeLists.txt  README.md  feature_extractor.cpp  gesture_management_service.cpp  iceoryx_gateway.cpp  keypoint_ring_buffer.cpp  main.cpp  program_options.cpp  program_options.hpp  signlang_model.cpp  signlang_model.hpp  signlang_result.hpp
src/signlang_manager/: CMakeLists.txt  README.md  bluetooth_gatt_server.cpp  bluetooth_gatt_server.hpp  main.cpp  manager_service.cpp  prototype_database.cpp
src/speech_asr/: CMakeLists.txt  README.md  main.cpp  program_options.cpp  program_options.hpp
src/speech_tts/: piper_phonemizer.cpp
src/state_machine/: CMakeLists.txt  README.md  app_state.cpp  app_state.hpp  main.cpp  program_options.cpp  program_options.hpp
src/telemetry_service/: main.cpp
src/tts_output/: CMakeLists.txt  alsa_player.cpp  alsa_player.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  null_tts_engine.cpp  null_tts_engine.hpp  piper_tts_engine.cpp  piper_tts_engine.hpp  program_options.cpp  program_options.hpp  tts_engine.hpp
src/tts_output/piper/: piper.cpp  piper.h  piper_impl.hpp
src/video_frontend/: CMakeLists.txt  README.md  main.cpp  video_processor.cpp  video_processor.hpp  video_snapshot_test.cpp
